tests/src/frontend/syntax/invalid/star_star_exponentiation.sk
fun main(): String {
  a ** b
}
